k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: savesync
  labels:
    name: savesync
    app.kubernetes.io/name: savesync
    app.kubernetes.io/part-of: savesync
